--- a/src/app/recipe/timer-button/timer-button.component.scss
+++ b/src/app/recipe/timer-button/timer-button.component.scss
@@ -10,5 +10,5 @@ app-icon-time {
   fill: $linkColor;
 }
 .stop {
-  color: red;
+  color: $visibleRed;
 }
